--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="modelView"
+            name="vm"
             type="com.example.simpletask_kotlin.ui.tasks.TasksViewModel" />
 
     </data>
@@ -21,7 +21,7 @@
             android:id="@+id/error_message_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MainFragment"
+            app:errorTextState="@{vm.uiState}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,13 +34,25 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:uiState="@{vm.uiState}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tasks_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            app:uiState="@{vm.uiState}" />
+
+        <Button
+            android:id="@+id/test_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="test"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="16dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
